--- a/09_modelo_KNN.ipynb
+++ b/09_modelo_KNN.ipynb
@@ -329,51 +329,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 95,
-   "id": "7b068ec1-1dfb-4023-b2ae-5bd858f542e2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['gender_1.0', 'education_secondary_complete',\n",
-       "       'education_secondary_incomplete',\n",
-       "       'education_technical_education/university_incomplete',\n",
-       "       'education_university_graduate_or_higher',\n",
-       "       'marital_status_Married-civilian spouse present',\n",
-       "       'marital_status_Never married', 'marital_status_Otro',\n",
-       "       'marital_status_Widowed', 'race_Otro', 'race_White', 'is_hispanic_Otro',\n",
-       "       'employment_commitment_Full-time schedules',\n",
-       "       'employment_commitment_Not in labor force',\n",
-       "       'employment_commitment_Otro',\n",
-       "       'industry_code_main_Manufacturing-durable goods',\n",
-       "       'industry_code_main_Not in universe or children',\n",
-       "       'industry_code_main_Otro', 'industry_code_main_Retail trade',\n",
-       "       'household_stat_Householder', 'household_stat_Nonfamily Householder',\n",
-       "       'household_stat_Other', 'household_stat_Otro', 'household_stat_Spouse',\n",
-       "       'tax_status_Joint both under 65', 'tax_status_Nonfiler',\n",
-       "       'tax_status_Otro', 'tax_status_Single', 'citizenship_Native',\n",
-       "       'citizenship_Otro', 'country_of_birth_own_US',\n",
-       "       'migration_code_change_in_msa_MSA to MSA',\n",
-       "       'migration_code_change_in_msa_Otro',\n",
-       "       'migration_code_change_in_msa_unchanged',\n",
-       "       'migration_code_change_in_reg_Otro',\n",
-       "       'migration_code_change_in_reg_unchanged', 'income_above_limit_1.0'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_categorical = df.select_dtypes(exclude=[np.number])\n",
-    "df_categorical.columns"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "a5d8046d-7d5f-4708-b018-ec69e4d1bea8",
    "metadata": {},
@@ -616,9 +571,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0e180d4f-3304-44da-8ce5-33ac769228f7",
+   "metadata": {},
+   "source": [
+    "### 1. Buen desempeño del modelo \n",
+    "- Se ha utilizado un modelo **K-Nearest Neighbors (KNN)** con **K = 6**, logrando una **precisión del 92.84%** en la clasificación.  \n",
+    "- La **matriz de confusión** muestra que el modelo identifica correctamente la mayoría de los casos:  \n",
+    "  - **90.86%** de verdaderos positivos.  \n",
+    "  - **1.98%** de verdaderos negativos.  \n",
+    "  - **6.02%** de falsos positivos.  \n",
+    "  - **1.14%** de falsos negativos.  \n",
+    "- Aunque el modelo tiene un buen desempeño general, su capacidad para detectar la clase minoritaria (ingresos altos) es limitada.  \n",
+    "\n",
+    "### 2. Desbalance de clases y su impacto \n",
+    "- Se observa que la **precisión para la clase mayoritaria (ingresos bajos) es muy alta (94%)**, mientras que para la clase minoritaria (ingresos altos) es **más baja (64%)**.  \n",
+    "- La **recall para ingresos altos es solo del 25%**, lo que indica que el modelo tiene dificultades para identificar estos casos.  \n",
+    "- Este desbalance puede afectar la utilidad del modelo en escenarios donde detectar ingresos altos es clave.  \n",
+    "\n",
+    "### 3. Posibles mejoras \n",
+    "- Considerar técnicas de **balanceo de clases**, como sobremuestreo de la clase minoritaria o submuestreo de la clase mayoritaria.  \n",
+    "- Explorar métodos de **ponderación de vecinos** para dar más importancia a ciertas observaciones en la clasificación.  \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "070db11d-fc2f-4cfd-a280-7c754dac8942",
+   "id": "90eac2fe-6cd2-4235-b623-043710edb57c",
    "metadata": {},
    "outputs": [],
    "source": []
