--- a/04_standardizar.ipynb
+++ b/04_standardizar.ipynb
@@ -3,14 +3,16 @@
   {
    "cell_type": "markdown",
    "id": "60864154-2990-4806-ac4a-0f2975065a41",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Importar Librarias y datos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 130,
    "id": "6740445f-db1a-45d7-958e-bfe824552dcf",
    "metadata": {},
    "outputs": [],
@@ -28,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 131,
    "id": "c03a36d5-5572-42dd-ab96-cd92c2fb4c34",
    "metadata": {},
    "outputs": [],
@@ -38,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 132,
    "id": "c2e56a0b-2f3d-4573-8f9e-326c86f0a07d",
    "metadata": {},
    "outputs": [
@@ -258,7 +260,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,14 +272,16 @@
   {
    "cell_type": "markdown",
    "id": "ba40bf33-13ab-4d14-bfb7-5f7c97f4546e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Modificar datos a binario"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 134,
    "id": "10d7cfa6-1302-4b09-853b-959321efa9db",
    "metadata": {},
    "outputs": [
@@ -325,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 135,
    "id": "6c3752f5-13a3-449c-a968-c1ce3191434a",
    "metadata": {},
    "outputs": [
@@ -343,7 +347,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 136,
    "id": "4605cf93-6dd8-4670-96e9-68d1604fe109",
    "metadata": {},
    "outputs": [
@@ -364,7 +368,7 @@
        "array(['US', 'Other'], dtype=object)"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 137,
    "id": "a882d9a5-c109-4e0e-9bb3-6309b54e5203",
    "metadata": {},
    "outputs": [
@@ -387,7 +391,7 @@
        "array(['Female', 'Male'], dtype=object)"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 138,
    "id": "a8a6f4cf-10f3-4332-a078-5422049a78ef",
    "metadata": {},
    "outputs": [
@@ -416,7 +420,7 @@
        "array([1, 0], dtype=int64)"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 139,
    "id": "4a3880a0-ca5f-4dab-a3f6-3e8b94e4160c",
    "metadata": {},
    "outputs": [
@@ -446,7 +450,7 @@
        "array([0, 1], dtype=int64)"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 142,
    "id": "32bd4b85-bb4d-4150-be73-bf85b780fe6e",
    "metadata": {},
    "outputs": [
@@ -512,7 +516,7 @@
        "       'Grandchild <18 never marr RP of subfamily'], dtype=object)"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 143,
    "id": "7967e7d3-52b6-4694-a020-2b27d2fe659e",
    "metadata": {},
    "outputs": [
@@ -540,7 +544,7 @@
        "       'Doctorate degree(PhD EdD)'], dtype=object)"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 144,
    "id": "b86ca6b3-e98b-4fbd-adbe-897f127134d9",
    "metadata": {},
    "outputs": [],
@@ -582,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 145,
    "id": "b06d4b6f-a8e2-49c0-bfe6-e89149f8da57",
    "metadata": {},
    "outputs": [
@@ -595,7 +599,7 @@
        "       'Doctorate degree(PhD EdD)'], dtype=object)"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 146,
    "id": "a3731136-21a0-4f9c-9adb-6056545faa50",
    "metadata": {},
    "outputs": [],
@@ -658,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 147,
    "id": "20fa0ec7-7194-4e64-bd7c-0c83bea08335",
    "metadata": {},
    "outputs": [
@@ -669,7 +673,7 @@
        "       'Grandchild', 'Group Quarters'], dtype=object)"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 149,
    "id": "ecb71832-bbf8-47c3-92ee-468450415615",
    "metadata": {},
    "outputs": [],
