--- a/05_P_valor_Vif.ipynb
+++ b/05_P_valor_Vif.ipynb
@@ -3,14 +3,16 @@
   {
    "cell_type": "markdown",
    "id": "711cef5b-bc4f-4afc-bee2-1736b1d80d14",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Importar Librarias y datos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 114,
    "id": "2bad4bdd-f124-49e9-b512-a0dfa2e144f8",
    "metadata": {},
    "outputs": [],
@@ -28,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 115,
    "id": "7f0256f7-064a-4f22-9e3c-c793a64e224a",
    "metadata": {},
    "outputs": [],
@@ -38,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 116,
    "id": "cc7890d3-1501-47f8-b4c2-4a1fd1b7bf61",
    "metadata": {},
    "outputs": [
@@ -258,7 +260,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 118,
    "id": "1dc98865-4c32-47b5-9d18-d9c34fbe0f4c",
    "metadata": {},
    "outputs": [
@@ -328,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 119,
    "id": "0a14563c-4613-4f5d-bafe-d7c52d0cf99e",
    "metadata": {},
    "outputs": [],
@@ -352,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 121,
    "id": "bab63dbe-5f4a-419a-8b47-2f7099d12d3b",
    "metadata": {},
    "outputs": [],
@@ -390,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 123,
    "id": "c1f5ed5a-fc69-4ecd-a92e-b3f355724802",
    "metadata": {},
    "outputs": [],
@@ -406,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 131,
    "id": "8ca704fc-9df5-4b0c-bec2-0777d3097e9a",
    "metadata": {},
    "outputs": [
@@ -458,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 137,
    "id": "72d86ac9-afe2-46cd-8605-7c362b37931a",
    "metadata": {},
    "outputs": [
@@ -496,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 139,
    "id": "1fa71551-0b42-4954-a34e-bab308e3b5c3",
    "metadata": {},
    "outputs": [
@@ -542,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 140,
    "id": "043493e5-7cd4-48e9-8f58-d14d127c53c6",
    "metadata": {
     "scrolled": true
@@ -574,7 +576,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,14 +612,16 @@
   {
    "cell_type": "markdown",
    "id": "d1a8f4c1-1e87-4422-bddb-efc97e9a3e1a",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# **Vif**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 145,
    "id": "2d96cb21-5e89-4d80-978e-eb1f8fe2e855",
    "metadata": {},
    "outputs": [],
@@ -628,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 149,
    "id": "4df82157-b26c-4026-bd09-29895e775d5d",
    "metadata": {},
    "outputs": [
@@ -641,7 +645,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 151,
    "id": "f5cb258b-149e-4f4a-a4ff-ee73534b8e09",
    "metadata": {},
    "outputs": [
@@ -681,7 +685,7 @@
        " 'income_above_limit': 1.2731050989006856}"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
