--- a/09_modelo_Arboles decision_Random_Forest.ipynb
+++ b/09_modelo_Arboles decision_Random_Forest.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "aac06e8b-781d-45d0-85c2-115ec1632720",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "5c5fabd1-370b-4d83-98f0-1ad0b94be610",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "f500946e-8f40-4de9-852b-9616cc56dd5f",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
        "[5 rows x 46 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "92aaeaa3-68e7-476d-9dc5-7e732a479ce5",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "370af5ce-3ade-4c74-961e-ae6699bbcfb9",
    "metadata": {},
    "outputs": [
@@ -390,7 +390,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "de0c6d53-b861-4e47-8818-b41d1a4a5657",
    "metadata": {},
    "outputs": [
@@ -411,7 +411,7 @@
        "(159814, 46)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 123,
    "id": "35c77844-fd59-4daf-975f-3bcd0efd0fc5",
    "metadata": {},
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 126,
    "id": "46e4e216-c598-4d55-ae51-0a2f777401ca",
    "metadata": {},
    "outputs": [],
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 129,
    "id": "f9cff836-b60b-461d-a7a5-2c644176676d",
    "metadata": {},
    "outputs": [],
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 132,
    "id": "aea7c2f9-1a0b-4d0c-bb71-3b8ebbc8455e",
    "metadata": {},
    "outputs": [
@@ -507,11 +507,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\rossj\\AppData\\Local\\Temp\\ipykernel_45560\\4179262336.py:12: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "C:\\Users\\meryl\\AppData\\Local\\Temp\\ipykernel_34744\\4179262336.py:12: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  df_report.loc['accuracy'] = [accuracy, '', '', '']\n",
-      "C:\\Users\\rossj\\AppData\\Local\\Temp\\ipykernel_45560\\4179262336.py:12: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "C:\\Users\\meryl\\AppData\\Local\\Temp\\ipykernel_34744\\4179262336.py:12: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  df_report.loc['accuracy'] = [accuracy, '', '', '']\n",
-      "C:\\Users\\rossj\\AppData\\Local\\Temp\\ipykernel_45560\\4179262336.py:12: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "C:\\Users\\meryl\\AppData\\Local\\Temp\\ipykernel_34744\\4179262336.py:12: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  df_report.loc['accuracy'] = [accuracy, '', '', '']\n"
      ]
     }
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 138,
    "id": "05316e56-d380-402f-a2dd-d3109073d182",
    "metadata": {},
    "outputs": [],
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 141,
    "id": "a6b6dfd1-f861-4600-8c91-fdf56b45bd56",
    "metadata": {},
    "outputs": [],
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 144,
    "id": "f121ea9c-bbae-4137-9f00-94629949621a",
    "metadata": {},
    "outputs": [
@@ -663,11 +663,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\rossj\\AppData\\Local\\Temp\\ipykernel_45560\\2626967912.py:13: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "C:\\Users\\meryl\\AppData\\Local\\Temp\\ipykernel_34744\\2626967912.py:13: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  df_report.loc['accuracy'] = [accuracy_rf, '', '', '']\n",
-      "C:\\Users\\rossj\\AppData\\Local\\Temp\\ipykernel_45560\\2626967912.py:13: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "C:\\Users\\meryl\\AppData\\Local\\Temp\\ipykernel_34744\\2626967912.py:13: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  df_report.loc['accuracy'] = [accuracy_rf, '', '', '']\n",
-      "C:\\Users\\rossj\\AppData\\Local\\Temp\\ipykernel_45560\\2626967912.py:13: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "C:\\Users\\meryl\\AppData\\Local\\Temp\\ipykernel_34744\\2626967912.py:13: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  df_report.loc['accuracy'] = [accuracy_rf, '', '', '']\n"
      ]
     },
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 155,
    "id": "c4ce9325-cdf3-4170-a4f4-9448fb6ce95e",
    "metadata": {},
    "outputs": [
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 163,
    "id": "acdea24d-4aa4-44fc-9b20-119b5cc2e5e6",
    "metadata": {},
    "outputs": [
@@ -978,7 +978,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\rossj\\AppData\\Local\\Temp\\ipykernel_45560\\1361370859.py:8: FutureWarning: \n",
+      "C:\\Users\\meryl\\AppData\\Local\\Temp\\ipykernel_34744\\1361370859.py:8: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -1049,7 +1049,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
